--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,10 @@
   font-weight: 400;
   font-style: normal;
 }
+
+* {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
