--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -738,6 +738,12 @@ h6 {
   background: transparent;
 }
 
+.feedback__container {
+  height: 100%;
+  padding: 0px 15px;
+  margin: 0 auto;
+}
+
 @media (min-width: 576px) {
   .header__container {
     padding: 0px 35px;
@@ -808,6 +814,10 @@ h6 {
 
   .meet {
     max-width: 400px;
+  }
+
+  .feedback__container {
+    padding: 0px 35px;
   }
 }
 
@@ -942,6 +952,10 @@ h6 {
   }
 
   .map__container {
+    padding: 0px 50px;
+  }
+
+  .feedback__container {
     padding: 0px 50px;
   }
 }
@@ -1127,6 +1141,11 @@ h6 {
 
   .person-meet__inner {
     max-width: 280px;
+  }
+
+  .feedback__container {
+    max-width: 1140px;
+    padding: 0px 0px;
   }
 }
 
