--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -744,6 +744,86 @@ h6 {
   margin: 0 auto;
 }
 
+.feedback__title {
+  font-size: 26px;
+  font-weight: 400;
+  line-height: 39px;
+  color: #37373f;
+}
+
+.feedback__item {
+  margin-top: 55px;
+  padding-bottom: 45px;
+  border-bottom: 1px solid #C7C7C7;
+}
+
+.feedback__user {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.feedback__img {
+  height: 85;
+  width: 85;
+}
+
+.feedback__user-info {
+  margin-left: 20px;
+}
+
+.feedback__name {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  color: #37373f;
+}
+
+.feedback__prof {
+  margin-top: 5px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  color: #37373f;
+}
+
+.feedback__stars {
+  margin-top: 5px;
+}
+
+.feedback__again {
+  display: inline-block;
+  margin-top: 25px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  color: #b3b3b3;
+}
+
+.feedback__text {
+  margin-top: 15px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  color: #37373f;
+}
+
+.feedback__time {
+  display: inline-block;
+  margin-top: 20px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  color: #b3b3b3;
+}
+
+.hidden-320 {
+  display: none;
+}
+
 @media (min-width: 576px) {
   .header__container {
     padding: 0px 35px;
