--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -744,6 +744,16 @@ h6 {
   margin: 0 auto;
 }
 
+.feedback__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .feedback__title {
   font-size: 26px;
   font-weight: 400;
@@ -820,8 +830,53 @@ h6 {
   color: #b3b3b3;
 }
 
+.feedback__btn {
+  margin-top: 50px;
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 25px;
+  color: #5286ec;
+  background: transparent;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+
 .hidden-320 {
   display: none;
+}
+
+.footer__container {
+  height: 100%;
+  padding: 0px 15px;
+  margin: 0 auto;
+}
+
+.footer__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.footer__botom-inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 @media (min-width: 576px) {
@@ -897,6 +952,14 @@ h6 {
   }
 
   .feedback__container {
+    padding: 0px 35px;
+  }
+
+  .hidden-320 {
+    display: block;
+  }
+
+  .footer__container {
     padding: 0px 35px;
   }
 }
@@ -1036,6 +1099,10 @@ h6 {
   }
 
   .feedback__container {
+    padding: 0px 50px;
+  }
+
+  .footer__container {
     padding: 0px 50px;
   }
 }
@@ -1224,6 +1291,15 @@ h6 {
   }
 
   .feedback__container {
+    max-width: 1140px;
+    padding: 0px 0px;
+  }
+
+  .feedback__item {
+    max-width: 650px;
+  }
+
+  .footer__container {
     max-width: 1140px;
     padding: 0px 0px;
   }
