--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,11 +258,10 @@ h6 {
 }
 
 .photosession__img {
-  margin-top: 15px;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .photosession__text {
